fix(sbb-header): allow z-index to be configured by CSS var (#1631)

--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -45,7 +45,7 @@
   position: var(--sbb-header-position);
   inset: 0 0 auto;
   background: var(--sbb-color-white-default);
-  z-index: 10;
+  z-index: var(--sbb-header-z-index, 10);
   transform: var(--sbb-header-transform);
   transition: {
     property: box-shadow;
